force-app/main/default/objects/Account/fields/Latest_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Latest_Case_Number__c</fullName>
    <description>Latest created Case Number</description>
    <label>Latest Case Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>