force-app/main/default/objects/Account/fields/Recent_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recent_Opportunity_Amount__c</fullName>
    <label>Recent Opportunity Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>